@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010 Brockmann Consult GmbH (info@brockmann-consult.de)
+ * Copyright (C) 2011 Brockmann Consult GmbH (info@brockmann-consult.de)
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the Free
@@ -63,6 +63,7 @@ public interface Constants {
 
     // context properties
     String Y_FLIPPED_PROPERTY_NAME = "yFlipped";
+    String WRITE_LOGSCALED_BANDS_GEOPHYSICAL_PROPERTY = "writeGeophysical";
     String PRODUCT_FILENAME_PROPERTY = "productName";
 
 }
