@@ -1,3 +1,19 @@
+<!--
+  ~ Copyright (C) 2011 Brockmann Consult GmbH (info@brockmann-consult.de)
+  ~
+  ~ This program is free software; you can redistribute it and/or modify it
+  ~ under the terms of the GNU General Public License as published by the Free
+  ~ Software Foundation; either version 3 of the License, or (at your option)
+  ~ any later version.
+  ~ This program is distributed in the hope that it will be useful, but WITHOUT
+  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+  ~ FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
+  ~ more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License along
+  ~ with this program; if not, see http://www.gnu.org/licenses/
+  -->
+
 <module>
     <manifestVersion>1.0.0</manifestVersion>
     <symbolicName>beam-netcdf</symbolicName>
@@ -16,6 +32,7 @@
     <changelog>
         <![CDATA[
         Changes in 1.101:<br/>
+        [BEAM-1233] - NetCDF-CF does not consider log-scaled attribute<br/>
         [BEAM-1215] - NetCDF product appears inverted<br/>
         [BEAM-1206] - CF Profile does not write latitude longitude data when writing pixel geo-coding<br/>
         [BEAM-1171] - NetCDF file not readable if variable name contains '.' or '/'<br/>
